  * DhMakePerl::Command::make: Try to guess tarball name when run from an
    unpacked source directory.
  * DhMakePerl::Command::Packaging: Don't sanitize version if given on the
    command line.
  * Update years of copyright.
  * DhMakePerl::Command::Packaging: replace "This library" with the module
    name in the long description, like we already did with "This module".

 -- Salvatore Bonaccorso <carnil@debian.org>  Wed, 19 Sep 2012 15:11:17 +0200

dh-make-perl (0.76-1) unstable; urgency=low

  [ Damyan Ivanov ]
  * create_watch: allow single-digit-only versions.
    Thanks to Kevin Ryde for the report and the proposed fix (Closes: #657249)

  [ Salvatore Bonaccorso ]
  * Update debian/copyright file.
    Update format to the copyright-format 1.0 released with Debian policy
    3.9.3.
    Adjust Source location for dh-make-perl to point to the git repository.
    Update copyright years for debian/* packaging.
  * Create debian/copyright with copyright-format 1.0
    debian/copyright files are created following the copyright-format 1.0
    released with Standards-Version 3.9.3.
  * Adjust test files to copyright-format 1.0
  * Bump Standards-Version to 3.9.3
  * Create packages with Standards-Version 3.9.3.
    Adjust control files in t/dists test-files.

  [ Per Carlson ]
  * License attribute from META file is array. (Closes: #664150)

  [ gregor herrmann ]
  * DhMakePerl::Config: mark cpan option as explicitly set when called as
    cpan2deb. Avoids overriding by having a cpan key in ~/.dh-make-perl
    /.dh-make-perl.conf. Thanks to Brendan Byrd for the bug report.
    (Closes: #668084)
  * debian/control: update {versioned,alternative} (build) dependencies.

  [ Damyan Ivanov ]
  * D:C:FromCPAN/find_debs_for_modules: search core first
    otherwise we get 'perl-modules (>= 2.21)' when requiring
    ExtUtils::ParseXS 2.21
  * bump copyright years
  * configure_cpan: ignore prerequisites to avoid unnecessary prompts