@@ -43,6 +43,11 @@ dh-make-perl (0.77-1) UNRELEASED; urgency=low
   * DhMakePerl::Command::Packaging: replace "This library" with the module
     name in the long description, like we already did with "This module".
 
+  [ Axel Beckert ]
+  * DhMakePerl::Command::make: Call git_add_debian before build_package
+    and install_package to not add files generated during the package
+    build process to the git repository.
+
  -- Salvatore Bonaccorso <carnil@debian.org>  Wed, 19 Sep 2012 15:11:17 +0200
 
 dh-make-perl (0.76-1) unstable; urgency=low
